--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
+      {% include navigation.html %}
       {{ content }}
       <footer class="site-footer">
         <span class="site-footer-credits">This page was generated and kindly served by <a href="https://pages.github.com">GitHub Pages</a>.</span>
