added a custom css style for navigation

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,10 @@
 ---
 $header-bg-color: #6b9cc9 !default;
 $header-bg-color-secondary: #6b70c9 !default;
+$navigation-selected-item-color: #17bf6b !default;
+
+.navigation_current {
+  color: $navigation-selected-item-color;
+}
 
 @import "{{ site.theme }}";
-
-
-
