--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<p>{{ page.date | date: "%b %-d, %Y" }} , by {{ page.author }}</p>
+<p>{{ page.date | date: "%b %-d, %Y" }}</p>
 
 {{ content }}
