--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,4 +8,24 @@ $navigation-selected-item-color: #17bf6b !default;
   color: $navigation-selected-item-color;
 }
 
+.pagination a, .pagination span {
+    padding: 7px 18px;
+    border: 1px solid #eee;
+    margin-left: -2px;
+    margin-right: -2px;
+    background-color: #ffffff;
+    display: inline-block;
+  }
+
+.pagination a {    
+    &:hover {
+        background-color: #f1f1f1;
+        color: #333;
+    }
+ }
+
+.pagination {
+    text-align: center;
+ }
+
 @import "{{ site.theme }}";
