--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@ $header-bg-color: #6b9cc9 !default;
 $header-bg-color-secondary: #6b70c9 !default;
 $navigation-selected-item-color: #17bf6b !default;
 $section-headings-color: #b5e853 !default;
-$blockquote-text-color: #819198 !default
+$blockquote-text-color: #819198 !default;
 $blockquote-color: #aaa !default;
 $blockquote-border: #666 !default;
 
