fix navigation colour and made text darker

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,9 +2,9 @@
 ---
 $header-bg-color: #6b9cc9 !default;
 $header-bg-color-secondary: #6b70c9 !default;
-$navigation-selected-item-color: #17bf6b !default;
+$navigation-selected-item-color: #819198 !default;
 $section-headings-color: #b5e853 !default;
-$blockquote-text-color: #819198 !default;
+$blockquote-text-color: #9ae012 !default;
 $blockquote-color: #aaa !default;
 $blockquote-border: #666 !default;
 
